[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/label.png" type="Texture" id=1]
[ext_resource path="res://assets/lofi_background.jpg" type="Texture" id=2]
[ext_resource path="res://menu/menu_controller.gd" type="Script" id=3]
[ext_resource path="res://assets/materials/hover_button.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/materials/normal_button.tres" type="StyleBox" id=5]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="title" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -224.0
margin_right = 300.0
margin_bottom = -24.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -344.0
margin_right = 194.0
margin_bottom = -62.0
custom_constants/separation = 10

[node name="computer" type="Button" parent="VBoxContainer"]
margin_right = 401.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color_hover = Color( 0.819608, 0.564706, 0.745098, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "computer goes first"

[node name="human" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 401.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color_hover = Color( 0.819608, 0.564706, 0.745098, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "I go first"

[node name="credits" type="Button" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 401.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color_hover = Color( 0.819608, 0.564706, 0.745098, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "credits & info"

[connection signal="button_down" from="VBoxContainer/computer" to="." method="_on_computer_button_down"]
[connection signal="button_down" from="VBoxContainer/human" to="." method="_on_human_button_down"]
[connection signal="button_down" from="VBoxContainer/credits" to="." method="_on_credits_button_down"]
